# ChangeLog for x11-themes/gnome-themes
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.209 2009/05/03 22:34:05 eva Exp $

*gnome-themes-2.26.1 (03 May 2009)

  03 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-themes-2.20.1.ebuild, -gnome-themes-2.22.2.ebuild,
  +gnome-themes-2.26.1.ebuild:
  New version for GNOME 2.26. Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.24.3.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-themes-2.24.3:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.24.3.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-themes-2.24.3.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gnome-themes-2.24.3.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gnome-themes-2.24.3.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-themes-2.24.3.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-themes-2.24.3.ebuild:
  Marking gnome-themes-2.24.3 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-themes-2.24.3.ebuild:
  Marking gnome-themes-2.24.3 ppc64 stable for bug 260063

  26 Feb 2009; Mart Raudsepp <leio@gentoo.org> gnome-themes-2.24.3.ebuild:
  Actually apply the bashism patch. Thanks to Sandro Bonazzola in bug
  260279.

  02 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gnome-themes-2.24.3-bashism.patch, -gnome-themes-2.20.2.ebuild,
  -gnome-themes-2.24.1.ebuild, gnome-themes-2.24.3.ebuild:
  Fix bashisms, bug #256337. Clean up old revisions.

*gnome-themes-2.24.3 (14 Jan 2009)

  14 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-themes-2.24.3.ebuild:
  Bump to 2.24.3. Updated greek translation.
