@@ -1,7 +1,9 @@
 AUX gnome-themes-2.24.3-bashism.patch 524 RMD160 bdbeb167d71dbaa242dd12a5bae979602d2dbe04 SHA1 cb26e34e085cb6b135a58cf9241308990c40aa4b SHA256 f94fbd406d38ad0878c01f8cbe75573ae21545e42b67b2c51f4248e2cf714b28
 DIST gnome-themes-2.24.3.tar.bz2 1505357 RMD160 26aac887bf42f938eba0fa3f8569dfd2af6d01eb SHA1 d6e53ccf9b767cf8352ff7876a98424a44a009a5 SHA256 8f13e281a2b4363a980de2edbf16cd1ce0c895f84496f00758c29e00c929bf97
 DIST gnome-themes-2.26.1.tar.bz2 1458871 RMD160 f4cd6285a7b3a19e5ae0ae7a4714db3db5a9055a SHA1 bea73a35df9112c2b449c3d1923b30830aaaf1de SHA256 19580e349178b2df8673ac7f188d60b401f45994b8d8218a20a225905b027336
+DIST gnome-themes-2.26.2.tar.bz2 1603539 RMD160 d259c7664bf6f4c55dd1abf1f9e76cd617fc2dab SHA1 4b548309069f9d3b62e8f63e590a40d77b285d02 SHA256 423dfc65ab4988f946077483359fdff05b481eca03c01fccdad7c21911ed93f4
 EBUILD gnome-themes-2.24.3.ebuild 1015 RMD160 2d89772d5b0643b383b4a5a9a8712e774e5314c4 SHA1 935639d2f9aa6a5e75b34dc19f38b2e32dadc979 SHA256 9195585511a291ecdd1a3cb9cb774096312afb1369c215713ee39e9c34bed639
 EBUILD gnome-themes-2.26.1.ebuild 1072 RMD160 6afbf86c2960d6f6d403163db51cf5da843a4037 SHA1 4d7644a93e2409ae4b571dd74478789ef3ce431a SHA256 b6e75766002ed94bd7585fe1b05cb1a687706a1da1a2493a56012cd71d3f8f9c
-MISC ChangeLog 25787 RMD160 5d410d241018af338bcb3fd8d26e2518dbb2d67b SHA1 200e13d649da2f9d2a8afd0fb15fcb1ab2fe0113 SHA256 0b83aa3f35bf0e7d49112e9ce23654b4794cc2faacfd2b81328b28009aca9a05
+EBUILD gnome-themes-2.26.2.ebuild 1072 RMD160 b3159d98822148dcedeebe1f2eada22896bd41dc SHA1 daefb51a631d62819fff5d4a01c6f4dcf53869d9 SHA256 96dff58257138462525082f4b59691acf5b6f025af5b973705eeb4491b8ce969
+MISC ChangeLog 25948 RMD160 501cc320fd51335109018210cc361ad6a547ce50 SHA1 8588b953f8f9749cc2de1dee3087b3c4a5772050 SHA256 27c3dd873a33e772214658d0671fa8fcec9b7284cd464933c8d4814004466948
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
