@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gnome-themes
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.209 2009/05/03 22:34:05 eva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.210 2009/05/18 20:40:36 eva Exp $
+
+*gnome-themes-2.26.2 (18 May 2009)
+
+  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +gnome-themes-2.26.2.ebuild:
+  Bump to 2.26.2. Translation updates.
 
 *gnome-themes-2.26.1 (03 May 2009)
 
